Ayotl Compiler/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> progr
Rule 1     progr -> neurProStart PROGRAM CONST_ID SEMICOLON pro1 L_BRACE neurPro1 pro2 R_BRACE neurPro
Rule 2     neurProStart -> <empty>
Rule 3     pro1 -> vars pro1
Rule 4     pro1 -> funcion pro1
Rule 5     pro1 -> empty
Rule 6     pro2 -> vars pro2
Rule 7     pro2 -> estatuto pro2
Rule 8     pro2 -> empty
Rule 9     neurPro1 -> <empty>
Rule 10    neurPro -> <empty>
Rule 11    vars -> tipo vars1 vars2 SEMICOLON
Rule 12    vars1 -> CONST_ID
Rule 13    vars1 -> CONST_ID L_BRACKET cte R_BRACKET
Rule 14    vars1 -> CONST_ID L_BRACKET cte R_BRACKET L_BRACKET cte R_BRACKET
Rule 15    vars2 -> COMMA vars1 vars2
Rule 16    vars2 -> empty
Rule 17    tipo -> INT
Rule 18    tipo -> FLOAT
Rule 19    bloque -> L_BRACE bloque1 R_BRACE
Rule 20    bloque1 -> estatuto bloque1
Rule 21    bloque1 -> empty
Rule 22    estatuto -> condicion
Rule 23    estatuto -> lectura
Rule 24    estatuto -> ciclo
Rule 25    estatuto -> asignacion
Rule 26    estatuto -> funcionLL SEMICOLON
Rule 27    estatuto -> impresion
Rule 28    asignacion -> datStr ASSIGN exp SEMICOLON
Rule 29    datStr -> CONST_ID
Rule 30    datStr -> CONST_ID L_BRACKET exp R_BRACKET
Rule 31    datStr -> CONST_ID L_BRACKET exp R_BRACKET L_BRACKET exp R_BRACKET
Rule 32    lectura -> READ L_PARENTHESIS datStr R_PARENTHESIS SEMICOLON
Rule 33    impresion -> PRINT L_PARENTHESIS datStr R_PARENTHESIS SEMICOLON
Rule 34    expresion -> expOp
Rule 35    expresion -> expOp AND expOp
Rule 36    expresion -> expOp OR expOp
Rule 37    expOp -> exp
Rule 38    expOp -> exp GREATER_THAN exp
Rule 39    expOp -> exp LESS_THAN exp
Rule 40    expOp -> exp EQUALS_TO exp
Rule 41    expOp -> exp DIFF_THAN exp
Rule 42    exp -> termino
Rule 43    exp -> termino PLUS exp
Rule 44    exp -> termino MINUS exp
Rule 45    termino -> factor
Rule 46    termino -> factor MULTIP termino
Rule 47    termino -> factor DIVIDE termino
Rule 48    factor -> L_PARENTHESIS expresion R_PARENTHESIS
Rule 49    factor -> factor1
Rule 50    factor -> PLUS factor1
Rule 51    factor -> MINUS factor1
Rule 52    factor1 -> datStr
Rule 53    factor1 -> funcionLL
Rule 54    factor1 -> cte
Rule 55    cte -> CONST_INT
Rule 56    cte -> CONST_FLOAT empty
Rule 57    condicion -> IF L_PARENTHESIS expresion neurCond1 bloque neurCond2
Rule 58    condicion -> IF L_PARENTHESIS expresion neurCond1 bloque ELSE neurCond2x1 neurCond3 bloque neurCond4
Rule 59    neurCond1 -> R_PARENTHESIS
Rule 60    neurCond2 -> <empty>
Rule 61    neurCond2x1 -> <empty>
Rule 62    neurCond3 -> <empty>
Rule 63    neurCond4 -> <empty>
Rule 64    ciclo -> FOR L_PARENTHESIS asignacion neurCiclo1 expresion neurCiclo2 SEMICOLON asignacion R_PARENTHESIS bloque neurCiclo3
Rule 65    ciclo -> WHILE neurCiclo1 L_PARENTHESIS expresion R_PARENTHESIS neurCiclo2 bloque neurCiclo3
Rule 66    neurCiclo1 -> <empty>
Rule 67    neurCiclo2 -> <empty>
Rule 68    neurCiclo3 -> <empty>
Rule 69    funcion -> neurFunc L_PARENTHESIS neurFunc2 funcion1 R_PARENTHESIS L_BRACE funcionVars bloque1 RETURN expresion SEMICOLON R_BRACE
Rule 70    funcion -> neurFuncVoid L_PARENTHESIS neurFunc2 funcion1 R_PARENTHESIS L_BRACE funcionVars bloque1 R_BRACE
Rule 71    funcionVars -> vars
Rule 72    funcionVars -> empty
Rule 73    neurFunc -> tipo CONST_ID
Rule 74    neurFuncVoid -> VOID CONST_ID
Rule 75    neurFunc2 -> tipo vars1
Rule 76    funcion1 -> COMMA neurFunc2 funcion1
Rule 77    funcion1 -> empty
Rule 78    funcionLL -> neurFuncLL L_PARENTHESIS neurFuncLL2 funcionLL1 R_PARENTHESIS
Rule 79    neurFuncLL -> CONST_ID
Rule 80    neurFuncLL2 -> exp
Rule 81    funcionLL1 -> COMMA exp funcionLL1
Rule 82    funcionLL1 -> empty
Rule 83    empty -> <empty>

Terminals, with rules where they appear

AND                  : 35
ASSIGN               : 28
COMMA                : 15 76 81
CONST_FLOAT          : 56
CONST_ID             : 1 12 13 14 29 30 31 73 74 79
CONST_INT            : 55
DIFF_THAN            : 41
DIVIDE               : 47
ELSE                 : 58
EQUALS_TO            : 40
FLOAT                : 18
FOR                  : 64
GREATER_THAN         : 38
IF                   : 57 58
INT                  : 17
LESS_THAN            : 39
L_BRACE              : 1 19 69 70
L_BRACKET            : 13 14 14 30 31 31
L_PARENTHESIS        : 32 33 48 57 58 64 65 69 70 78
MINUS                : 44 51
MULTIP               : 46
OR                   : 36
PLUS                 : 43 50
PRINT                : 33
PROGRAM              : 1
READ                 : 32
RETURN               : 69
R_BRACE              : 1 19 69 70
R_BRACKET            : 13 14 14 30 31 31
R_PARENTHESIS        : 32 33 48 59 64 65 69 70 78
SEMICOLON            : 1 11 26 28 32 33 64 69
VOID                 : 74
WHILE                : 65
error                : 

Nonterminals, with rules where they appear

asignacion           : 25 64 64
bloque               : 57 58 58 64 65
bloque1              : 19 20 69 70
ciclo                : 24
condicion            : 22
cte                  : 13 14 14 54
datStr               : 28 32 33 52
empty                : 5 8 16 21 56 72 77 82
estatuto             : 7 20
exp                  : 28 30 31 31 37 38 38 39 39 40 40 41 41 43 44 80 81
expOp                : 34 35 35 36 36
expresion            : 48 57 58 64 65 69
factor               : 45 46 47
factor1              : 49 50 51
funcion              : 4
funcion1             : 69 70 76
funcionLL            : 26 53
funcionLL1           : 78 81
funcionVars          : 69 70
impresion            : 27
lectura              : 23
neurCiclo1           : 64 65
neurCiclo2           : 64 65
neurCiclo3           : 64 65
neurCond1            : 57 58
neurCond2            : 57
neurCond2x1          : 58
neurCond3            : 58
neurCond4            : 58
neurFunc             : 69
neurFunc2            : 69 70 76
neurFuncLL           : 78
neurFuncLL2          : 78
neurFuncVoid         : 70
neurPro              : 1
neurPro1             : 1
neurProStart         : 1
pro1                 : 1 3 4
pro2                 : 1 6 7
progr                : 0
termino              : 42 43 44 46 47
tipo                 : 11 73 75
vars                 : 3 6 71
vars1                : 11 15 75
vars2                : 11 15

Parsing method: LALR

state 0

    (0) S' -> . progr
    (1) progr -> . neurProStart PROGRAM CONST_ID SEMICOLON pro1 L_BRACE neurPro1 pro2 R_BRACE neurPro
    (2) neurProStart -> .

    PROGRAM         reduce using rule 2 (neurProStart -> .)

    progr                          shift and go to state 1
    neurProStart                   shift and go to state 2

state 1

    (0) S' -> progr .



state 2

    (1) progr -> neurProStart . PROGRAM CONST_ID SEMICOLON pro1 L_BRACE neurPro1 pro2 R_BRACE neurPro

    PROGRAM         shift and go to state 3


state 3

    (1) progr -> neurProStart PROGRAM . CONST_ID SEMICOLON pro1 L_BRACE neurPro1 pro2 R_BRACE neurPro

    CONST_ID        shift and go to state 4


state 4

    (1) progr -> neurProStart PROGRAM CONST_ID . SEMICOLON pro1 L_BRACE neurPro1 pro2 R_BRACE neurPro

    SEMICOLON       shift and go to state 5


state 5

    (1) progr -> neurProStart PROGRAM CONST_ID SEMICOLON . pro1 L_BRACE neurPro1 pro2 R_BRACE neurPro
    (3) pro1 -> . vars pro1
    (4) pro1 -> . funcion pro1
    (5) pro1 -> . empty
    (11) vars -> . tipo vars1 vars2 SEMICOLON
    (69) funcion -> . neurFunc L_PARENTHESIS neurFunc2 funcion1 R_PARENTHESIS L_BRACE funcionVars bloque1 RETURN expresion SEMICOLON R_BRACE
    (70) funcion -> . neurFuncVoid L_PARENTHESIS neurFunc2 funcion1 R_PARENTHESIS L_BRACE funcionVars bloque1 R_BRACE
    (83) empty -> .
    (17) tipo -> . INT
    (18) tipo -> . FLOAT
    (73) neurFunc -> . tipo CONST_ID
    (74) neurFuncVoid -> . VOID CONST_ID

    L_BRACE         reduce using rule 83 (empty -> .)
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    VOID            shift and go to state 15

    pro1                           shift and go to state 6
    vars                           shift and go to state 7
    funcion                        shift and go to state 8
    empty                          shift and go to state 9
    tipo                           shift and go to state 10
    neurFunc                       shift and go to state 11
    neurFuncVoid                   shift and go to state 12

state 6

    (1) progr -> neurProStart PROGRAM CONST_ID SEMICOLON pro1 . L_BRACE neurPro1 pro2 R_BRACE neurPro

    L_BRACE         shift and go to state 16


state 7

    (3) pro1 -> vars . pro1
    (3) pro1 -> . vars pro1
    (4) pro1 -> . funcion pro1
    (5) pro1 -> . empty
    (11) vars -> . tipo vars1 vars2 SEMICOLON
    (69) funcion -> . neurFunc L_PARENTHESIS neurFunc2 funcion1 R_PARENTHESIS L_BRACE funcionVars bloque1 RETURN expresion SEMICOLON R_BRACE
    (70) funcion -> . neurFuncVoid L_PARENTHESIS neurFunc2 funcion1 R_PARENTHESIS L_BRACE funcionVars bloque1 R_BRACE
    (83) empty -> .
    (17) tipo -> . INT
    (18) tipo -> . FLOAT
    (73) neurFunc -> . tipo CONST_ID
    (74) neurFuncVoid -> . VOID CONST_ID

    L_BRACE         reduce using rule 83 (empty -> .)
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    VOID            shift and go to state 15

    vars                           shift and go to state 7
    pro1                           shift and go to state 17
    funcion                        shift and go to state 8
    empty                          shift and go to state 9
    tipo                           shift and go to state 10
    neurFunc                       shift and go to state 11
    neurFuncVoid                   shift and go to state 12

state 8

    (4) pro1 -> funcion . pro1
    (3) pro1 -> . vars pro1
    (4) pro1 -> . funcion pro1
    (5) pro1 -> . empty
    (11) vars -> . tipo vars1 vars2 SEMICOLON
    (69) funcion -> . neurFunc L_PARENTHESIS neurFunc2 funcion1 R_PARENTHESIS L_BRACE funcionVars bloque1 RETURN expresion SEMICOLON R_BRACE
    (70) funcion -> . neurFuncVoid L_PARENTHESIS neurFunc2 funcion1 R_PARENTHESIS L_BRACE funcionVars bloque1 R_BRACE
    (83) empty -> .
    (17) tipo -> . INT
    (18) tipo -> . FLOAT
    (73) neurFunc -> . tipo CONST_ID
    (74) neurFuncVoid -> . VOID CONST_ID

    L_BRACE         reduce using rule 83 (empty -> .)
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    VOID            shift and go to state 15

    funcion                        shift and go to state 8
    pro1                           shift and go to state 18
    vars                           shift and go to state 7
    empty                          shift and go to state 9
    tipo                           shift and go to state 10
    neurFunc                       shift and go to state 11
    neurFuncVoid                   shift and go to state 12

state 9

    (5) pro1 -> empty .

    L_BRACE         reduce using rule 5 (pro1 -> empty .)


state 10

    (11) vars -> tipo . vars1 vars2 SEMICOLON
    (73) neurFunc -> tipo . CONST_ID
    (12) vars1 -> . CONST_ID
    (13) vars1 -> . CONST_ID L_BRACKET cte R_BRACKET
    (14) vars1 -> . CONST_ID L_BRACKET cte R_BRACKET L_BRACKET cte R_BRACKET

    CONST_ID        shift and go to state 20

    vars1                          shift and go to state 19

state 11

    (69) funcion -> neurFunc . L_PARENTHESIS neurFunc2 funcion1 R_PARENTHESIS L_BRACE funcionVars bloque1 RETURN expresion SEMICOLON R_BRACE

    L_PARENTHESIS   shift and go to state 21


state 12

    (70) funcion -> neurFuncVoid . L_PARENTHESIS neurFunc2 funcion1 R_PARENTHESIS L_BRACE funcionVars bloque1 R_BRACE

    L_PARENTHESIS   shift and go to state 22


state 13

    (17) tipo -> INT .

    CONST_ID        reduce using rule 17 (tipo -> INT .)


state 14

    (18) tipo -> FLOAT .

    CONST_ID        reduce using rule 18 (tipo -> FLOAT .)


state 15

    (74) neurFuncVoid -> VOID . CONST_ID

    CONST_ID        shift and go to state 23


state 16

    (1) progr -> neurProStart PROGRAM CONST_ID SEMICOLON pro1 L_BRACE . neurPro1 pro2 R_BRACE neurPro
    (9) neurPro1 -> .

    INT             reduce using rule 9 (neurPro1 -> .)
    FLOAT           reduce using rule 9 (neurPro1 -> .)
    IF              reduce using rule 9 (neurPro1 -> .)
    READ            reduce using rule 9 (neurPro1 -> .)
    FOR             reduce using rule 9 (neurPro1 -> .)
    WHILE           reduce using rule 9 (neurPro1 -> .)
    PRINT           reduce using rule 9 (neurPro1 -> .)
    CONST_ID        reduce using rule 9 (neurPro1 -> .)
    R_BRACE         reduce using rule 9 (neurPro1 -> .)

    neurPro1                       shift and go to state 24

state 17

    (3) pro1 -> vars pro1 .

    L_BRACE         reduce using rule 3 (pro1 -> vars pro1 .)


state 18

    (4) pro1 -> funcion pro1 .

    L_BRACE         reduce using rule 4 (pro1 -> funcion pro1 .)


state 19

    (11) vars -> tipo vars1 . vars2 SEMICOLON
    (15) vars2 -> . COMMA vars1 vars2
    (16) vars2 -> . empty
    (83) empty -> .

    COMMA           shift and go to state 26
    SEMICOLON       reduce using rule 83 (empty -> .)

    vars2                          shift and go to state 25
    empty                          shift and go to state 27

state 20

    (73) neurFunc -> tipo CONST_ID .
    (12) vars1 -> CONST_ID .
    (13) vars1 -> CONST_ID . L_BRACKET cte R_BRACKET
    (14) vars1 -> CONST_ID . L_BRACKET cte R_BRACKET L_BRACKET cte R_BRACKET

    L_PARENTHESIS   reduce using rule 73 (neurFunc -> tipo CONST_ID .)
    COMMA           reduce using rule 12 (vars1 -> CONST_ID .)
    SEMICOLON       reduce using rule 12 (vars1 -> CONST_ID .)
    L_BRACKET       shift and go to state 28


state 21

    (69) funcion -> neurFunc L_PARENTHESIS . neurFunc2 funcion1 R_PARENTHESIS L_BRACE funcionVars bloque1 RETURN expresion SEMICOLON R_BRACE
    (75) neurFunc2 -> . tipo vars1
    (17) tipo -> . INT
    (18) tipo -> . FLOAT

    INT             shift and go to state 13
    FLOAT           shift and go to state 14

    neurFunc2                      shift and go to state 29
    tipo                           shift and go to state 30

state 22

    (70) funcion -> neurFuncVoid L_PARENTHESIS . neurFunc2 funcion1 R_PARENTHESIS L_BRACE funcionVars bloque1 R_BRACE
    (75) neurFunc2 -> . tipo vars1
    (17) tipo -> . INT
    (18) tipo -> . FLOAT

    INT             shift and go to state 13
    FLOAT           shift and go to state 14

    neurFunc2                      shift and go to state 31
    tipo                           shift and go to state 30

state 23

    (74) neurFuncVoid -> VOID CONST_ID .

    L_PARENTHESIS   reduce using rule 74 (neurFuncVoid -> VOID CONST_ID .)


state 24

    (1) progr -> neurProStart PROGRAM CONST_ID SEMICOLON pro1 L_BRACE neurPro1 . pro2 R_BRACE neurPro
    (6) pro2 -> . vars pro2
    (7) pro2 -> . estatuto pro2
    (8) pro2 -> . empty
    (11) vars -> . tipo vars1 vars2 SEMICOLON
    (22) estatuto -> . condicion
    (23) estatuto -> . lectura
    (24) estatuto -> . ciclo
    (25) estatuto -> . asignacion
    (26) estatuto -> . funcionLL SEMICOLON
    (27) estatuto -> . impresion
    (83) empty -> .
    (17) tipo -> . INT
    (18) tipo -> . FLOAT
    (57) condicion -> . IF L_PARENTHESIS expresion neurCond1 bloque neurCond2
    (58) condicion -> . IF L_PARENTHESIS expresion neurCond1 bloque ELSE neurCond2x1 neurCond3 bloque neurCond4
    (32) lectura -> . READ L_PARENTHESIS datStr R_PARENTHESIS SEMICOLON
    (64) ciclo -> . FOR L_PARENTHESIS asignacion neurCiclo1 expresion neurCiclo2 SEMICOLON asignacion R_PARENTHESIS bloque neurCiclo3
    (65) ciclo -> . WHILE neurCiclo1 L_PARENTHESIS expresion R_PARENTHESIS neurCiclo2 bloque neurCiclo3
    (28) asignacion -> . datStr ASSIGN exp SEMICOLON
    (78) funcionLL -> . neurFuncLL L_PARENTHESIS neurFuncLL2 funcionLL1 R_PARENTHESIS
    (33) impresion -> . PRINT L_PARENTHESIS datStr R_PARENTHESIS SEMICOLON
    (29) datStr -> . CONST_ID
    (30) datStr -> . CONST_ID L_BRACKET exp R_BRACKET
    (31) datStr -> . CONST_ID L_BRACKET exp R_BRACKET L_BRACKET exp R_BRACKET
    (79) neurFuncLL -> . CONST_ID

    R_BRACE         reduce using rule 83 (empty -> .)
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    IF              shift and go to state 44
    READ            shift and go to state 45
    FOR             shift and go to state 47
    WHILE           shift and go to state 48
    PRINT           shift and go to state 50
    CONST_ID        shift and go to state 32

    pro2                           shift and go to state 33
    vars                           shift and go to state 34
    estatuto                       shift and go to state 35
    empty                          shift and go to state 36
    tipo                           shift and go to state 37
    condicion                      shift and go to state 38
    lectura                        shift and go to state 39
    ciclo                          shift and go to state 40
    asignacion                     shift and go to state 41
    funcionLL                      shift and go to state 42
    impresion                      shift and go to state 43
    datStr                         shift and go to state 46
    neurFuncLL                     shift and go to state 49

state 25

    (11) vars -> tipo vars1 vars2 . SEMICOLON

    SEMICOLON       shift and go to state 51


state 26

    (15) vars2 -> COMMA . vars1 vars2
    (12) vars1 -> . CONST_ID
    (13) vars1 -> . CONST_ID L_BRACKET cte R_BRACKET
    (14) vars1 -> . CONST_ID L_BRACKET cte R_BRACKET L_BRACKET cte R_BRACKET

    CONST_ID        shift and go to state 53

    vars1                          shift and go to state 52

state 27

    (16) vars2 -> empty .

    SEMICOLON       reduce using rule 16 (vars2 -> empty .)


state 28

    (13) vars1 -> CONST_ID L_BRACKET . cte R_BRACKET
    (14) vars1 -> CONST_ID L_BRACKET . cte R_BRACKET L_BRACKET cte R_BRACKET
    (55) cte -> . CONST_INT
    (56) cte -> . CONST_FLOAT empty

    CONST_INT       shift and go to state 55
    CONST_FLOAT     shift and go to state 56

    cte                            shift and go to state 54

state 29

    (69) funcion -> neurFunc L_PARENTHESIS neurFunc2 . funcion1 R_PARENTHESIS L_BRACE funcionVars bloque1 RETURN expresion SEMICOLON R_BRACE
    (76) funcion1 -> . COMMA neurFunc2 funcion1
    (77) funcion1 -> . empty
    (83) empty -> .

    COMMA           shift and go to state 58
    R_PARENTHESIS   reduce using rule 83 (empty -> .)

    funcion1                       shift and go to state 57
    empty                          shift and go to state 59

state 30

    (75) neurFunc2 -> tipo . vars1
    (12) vars1 -> . CONST_ID
    (13) vars1 -> . CONST_ID L_BRACKET cte R_BRACKET
    (14) vars1 -> . CONST_ID L_BRACKET cte R_BRACKET L_BRACKET cte R_BRACKET

    CONST_ID        shift and go to state 53

    vars1                          shift and go to state 60

state 31

    (70) funcion -> neurFuncVoid L_PARENTHESIS neurFunc2 . funcion1 R_PARENTHESIS L_BRACE funcionVars bloque1 R_BRACE
    (76) funcion1 -> . COMMA neurFunc2 funcion1
    (77) funcion1 -> . empty
    (83) empty -> .

    COMMA           shift and go to state 58
    R_PARENTHESIS   reduce using rule 83 (empty -> .)

    funcion1                       shift and go to state 61
    empty                          shift and go to state 59

state 32

    (29) datStr -> CONST_ID .
    (30) datStr -> CONST_ID . L_BRACKET exp R_BRACKET
    (31) datStr -> CONST_ID . L_BRACKET exp R_BRACKET L_BRACKET exp R_BRACKET
    (79) neurFuncLL -> CONST_ID .

    ASSIGN          reduce using rule 29 (datStr -> CONST_ID .)
    MULTIP          reduce using rule 29 (datStr -> CONST_ID .)
    DIVIDE          reduce using rule 29 (datStr -> CONST_ID .)
    PLUS            reduce using rule 29 (datStr -> CONST_ID .)
    MINUS           reduce using rule 29 (datStr -> CONST_ID .)
    R_BRACKET       reduce using rule 29 (datStr -> CONST_ID .)
    GREATER_THAN    reduce using rule 29 (datStr -> CONST_ID .)
    LESS_THAN       reduce using rule 29 (datStr -> CONST_ID .)
    EQUALS_TO       reduce using rule 29 (datStr -> CONST_ID .)
    DIFF_THAN       reduce using rule 29 (datStr -> CONST_ID .)
    AND             reduce using rule 29 (datStr -> CONST_ID .)
    OR              reduce using rule 29 (datStr -> CONST_ID .)
    R_PARENTHESIS   reduce using rule 29 (datStr -> CONST_ID .)
    SEMICOLON       reduce using rule 29 (datStr -> CONST_ID .)
    COMMA           reduce using rule 29 (datStr -> CONST_ID .)
    L_BRACKET       shift and go to state 62
    L_PARENTHESIS   reduce using rule 79 (neurFuncLL -> CONST_ID .)


state 33

    (1) progr -> neurProStart PROGRAM CONST_ID SEMICOLON pro1 L_BRACE neurPro1 pro2 . R_BRACE neurPro

    R_BRACE         shift and go to state 63


state 34

    (6) pro2 -> vars . pro2
    (6) pro2 -> . vars pro2
    (7) pro2 -> . estatuto pro2
    (8) pro2 -> . empty
    (11) vars -> . tipo vars1 vars2 SEMICOLON
    (22) estatuto -> . condicion
    (23) estatuto -> . lectura
    (24) estatuto -> . ciclo
    (25) estatuto -> . asignacion
    (26) estatuto -> . funcionLL SEMICOLON
    (27) estatuto -> . impresion
    (83) empty -> .
    (17) tipo -> . INT
    (18) tipo -> . FLOAT
    (57) condicion -> . IF L_PARENTHESIS expresion neurCond1 bloque neurCond2
    (58) condicion -> . IF L_PARENTHESIS expresion neurCond1 bloque ELSE neurCond2x1 neurCond3 bloque neurCond4
    (32) lectura -> . READ L_PARENTHESIS datStr R_PARENTHESIS SEMICOLON
    (64) ciclo -> . FOR L_PARENTHESIS asignacion neurCiclo1 expresion neurCiclo2 SEMICOLON asignacion R_PARENTHESIS bloque neurCiclo3
    (65) ciclo -> . WHILE neurCiclo1 L_PARENTHESIS expresion R_PARENTHESIS neurCiclo2 bloque neurCiclo3
    (28) asignacion -> . datStr ASSIGN exp SEMICOLON
    (78) funcionLL -> . neurFuncLL L_PARENTHESIS neurFuncLL2 funcionLL1 R_PARENTHESIS
    (33) impresion -> . PRINT L_PARENTHESIS datStr R_PARENTHESIS SEMICOLON
    (29) datStr -> . CONST_ID
    (30) datStr -> . CONST_ID L_BRACKET exp R_BRACKET
    (31) datStr -> . CONST_ID L_BRACKET exp R_BRACKET L_BRACKET exp R_BRACKET
    (79) neurFuncLL -> . CONST_ID

    R_BRACE         reduce using rule 83 (empty -> .)
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    IF              shift and go to state 44
    READ            shift and go to state 45
    FOR             shift and go to state 47
    WHILE           shift and go to state 48
    PRINT           shift and go to state 50
    CONST_ID        shift and go to state 32

    vars                           shift and go to state 34
    pro2                           shift and go to state 64
    estatuto                       shift and go to state 35
    empty                          shift and go to state 36
    tipo                           shift and go to state 37
    condicion                      shift and go to state 38
    lectura                        shift and go to state 39
    ciclo                          shift and go to state 40
    asignacion                     shift and go to state 41
    funcionLL                      shift and go to state 42
    impresion                      shift and go to state 43
    datStr                         shift and go to state 46
    neurFuncLL                     shift and go to state 49

state 35

    (7) pro2 -> estatuto . pro2
    (6) pro2 -> . vars pro2
    (7) pro2 -> . estatuto pro2
    (8) pro2 -> . empty
    (11) vars -> . tipo vars1 vars2 SEMICOLON
    (22) estatuto -> . condicion
    (23) estatuto -> . lectura
    (24) estatuto -> . ciclo
    (25) estatuto -> . asignacion
    (26) estatuto -> . funcionLL SEMICOLON
    (27) estatuto -> . impresion
    (83) empty -> .
    (17) tipo -> . INT
    (18) tipo -> . FLOAT
    (57) condicion -> . IF L_PARENTHESIS expresion neurCond1 bloque neurCond2
    (58) condicion -> . IF L_PARENTHESIS expresion neurCond1 bloque ELSE neurCond2x1 neurCond3 bloque neurCond4
    (32) lectura -> . READ L_PARENTHESIS datStr R_PARENTHESIS SEMICOLON
    (64) ciclo -> . FOR L_PARENTHESIS asignacion neurCiclo1 expresion neurCiclo2 SEMICOLON asignacion R_PARENTHESIS bloque neurCiclo3
    (65) ciclo -> . WHILE neurCiclo1 L_PARENTHESIS expresion R_PARENTHESIS neurCiclo2 bloque neurCiclo3
    (28) asignacion -> . datStr ASSIGN exp SEMICOLON
    (78) funcionLL -> . neurFuncLL L_PARENTHESIS neurFuncLL2 funcionLL1 R_PARENTHESIS
    (33) impresion -> . PRINT L_PARENTHESIS datStr R_PARENTHESIS SEMICOLON
    (29) datStr -> . CONST_ID
    (30) datStr -> . CONST_ID L_BRACKET exp R_BRACKET
    (31) datStr -> . CONST_ID L_BRACKET exp R_BRACKET L_BRACKET exp R_BRACKET
    (79) neurFuncLL -> . CONST_ID

    R_BRACE         reduce using rule 83 (empty -> .)
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    IF              shift and go to state 44
    READ            shift and go to state 45
    FOR             shift and go to state 47
    WHILE           shift and go to state 48
    PRINT           shift and go to state 50
    CONST_ID        shift and go to state 32

    estatuto                       shift and go to state 35
    pro2                           shift and go to state 65
    vars                           shift and go to state 34
    empty                          shift and go to state 36
    tipo                           shift and go to state 37
    condicion                      shift and go to state 38
    lectura                        shift and go to state 39
    ciclo                          shift and go to state 40
    asignacion                     shift and go to state 41
    funcionLL                      shift and go to state 42
    impresion                      shift and go to state 43
    datStr                         shift and go to state 46
    neurFuncLL                     shift and go to state 49

state 36

    (8) pro2 -> empty .

    R_BRACE         reduce using rule 8 (pro2 -> empty .)


state 37

    (11) vars -> tipo . vars1 vars2 SEMICOLON
    (12) vars1 -> . CONST_ID
    (13) vars1 -> . CONST_ID L_BRACKET cte R_BRACKET
    (14) vars1 -> . CONST_ID L_BRACKET cte R_BRACKET L_BRACKET cte R_BRACKET

    CONST_ID        shift and go to state 53

    vars1                          shift and go to state 19

state 38

    (22) estatuto -> condicion .

    INT             reduce using rule 22 (estatuto -> condicion .)
    FLOAT           reduce using rule 22 (estatuto -> condicion .)
    IF              reduce using rule 22 (estatuto -> condicion .)
    READ            reduce using rule 22 (estatuto -> condicion .)
    FOR             reduce using rule 22 (estatuto -> condicion .)
    WHILE           reduce using rule 22 (estatuto -> condicion .)
    PRINT           reduce using rule 22 (estatuto -> condicion .)
    CONST_ID        reduce using rule 22 (estatuto -> condicion .)
    R_BRACE         reduce using rule 22 (estatuto -> condicion .)
    RETURN          reduce using rule 22 (estatuto -> condicion .)


state 39

    (23) estatuto -> lectura .

    INT             reduce using rule 23 (estatuto -> lectura .)
    FLOAT           reduce using rule 23 (estatuto -> lectura .)
    IF              reduce using rule 23 (estatuto -> lectura .)
    READ            reduce using rule 23 (estatuto -> lectura .)
    FOR             reduce using rule 23 (estatuto -> lectura .)
    WHILE           reduce using rule 23 (estatuto -> lectura .)
    PRINT           reduce using rule 23 (estatuto -> lectura .)
    CONST_ID        reduce using rule 23 (estatuto -> lectura .)
    R_BRACE         reduce using rule 23 (estatuto -> lectura .)
    RETURN          reduce using rule 23 (estatuto -> lectura .)


state 40

    (24) estatuto -> ciclo .

    INT             reduce using rule 24 (estatuto -> ciclo .)
    FLOAT           reduce using rule 24 (estatuto -> ciclo .)
    IF              reduce using rule 24 (estatuto -> ciclo .)
    READ            reduce using rule 24 (estatuto -> ciclo .)
    FOR             reduce using rule 24 (estatuto -> ciclo .)
    WHILE           reduce using rule 24 (estatuto -> ciclo .)
    PRINT           reduce using rule 24 (estatuto -> ciclo .)
    CONST_ID        reduce using rule 24 (estatuto -> ciclo .)
    R_BRACE         reduce using rule 24 (estatuto -> ciclo .)
    RETURN          reduce using rule 24 (estatuto -> ciclo .)


state 41

    (25) estatuto -> asignacion .

    INT             reduce using rule 25 (estatuto -> asignacion .)
    FLOAT           reduce using rule 25 (estatuto -> asignacion .)
    IF              reduce using rule 25 (estatuto -> asignacion .)
    READ            reduce using rule 25 (estatuto -> asignacion .)
    FOR             reduce using rule 25 (estatuto -> asignacion .)
    WHILE           reduce using rule 25 (estatuto -> asignacion .)
    PRINT           reduce using rule 25 (estatuto -> asignacion .)
    CONST_ID        reduce using rule 25 (estatuto -> asignacion .)
    R_BRACE         reduce using rule 25 (estatuto -> asignacion .)
    RETURN          reduce using rule 25 (estatuto -> asignacion .)


state 42

    (26) estatuto -> funcionLL . SEMICOLON

    SEMICOLON       shift and go to state 66


state 43

    (27) estatuto -> impresion .

    INT             reduce using rule 27 (estatuto -> impresion .)
    FLOAT           reduce using rule 27 (estatuto -> impresion .)
    IF              reduce using rule 27 (estatuto -> impresion .)
    READ            reduce using rule 27 (estatuto -> impresion .)
    FOR             reduce using rule 27 (estatuto -> impresion .)
    WHILE           reduce using rule 27 (estatuto -> impresion .)
    PRINT           reduce using rule 27 (estatuto -> impresion .)
    CONST_ID        reduce using rule 27 (estatuto -> impresion .)
    R_BRACE         reduce using rule 27 (estatuto -> impresion .)
    RETURN          reduce using rule 27 (estatuto -> impresion .)


state 44

    (57) condicion -> IF . L_PARENTHESIS expresion neurCond1 bloque neurCond2
    (58) condicion -> IF . L_PARENTHESIS expresion neurCond1 bloque ELSE neurCond2x1 neurCond3 bloque neurCond4

    L_PARENTHESIS   shift and go to state 67


state 45

    (32) lectura -> READ . L_PARENTHESIS datStr R_PARENTHESIS SEMICOLON

    L_PARENTHESIS   shift and go to state 68


state 46

    (28) asignacion -> datStr . ASSIGN exp SEMICOLON

    ASSIGN          shift and go to state 69


state 47

    (64) ciclo -> FOR . L_PARENTHESIS asignacion neurCiclo1 expresion neurCiclo2 SEMICOLON asignacion R_PARENTHESIS bloque neurCiclo3

    L_PARENTHESIS   shift and go to state 70


state 48

    (65) ciclo -> WHILE . neurCiclo1 L_PARENTHESIS expresion R_PARENTHESIS neurCiclo2 bloque neurCiclo3
    (66) neurCiclo1 -> .

    L_PARENTHESIS   reduce using rule 66 (neurCiclo1 -> .)

    neurCiclo1                     shift and go to state 71

